<resources>
    <string name="app_name">Bahdjol</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum_dolor_sit">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi pulvinar malesuada donec ultrices et nisl in sit consequat. Pellentesque aenean urna, id vel in. Sit purus pharetra risus volutpat ut tempor.</string>
    <string name="email_phone_number">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="marital_status">Marital Status</string>
    <string name="cleaning">Cleaning</string>
    <string name="send">Send</string>
    <string name="date_and_time">Date and time</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="enter_type">Enter Type</string>
    <string name="description">Description</string>
    <string name="history">History</string>
    <string name="calendar">Calendar</string>
    <string name="info">Info</string>
    <string name="bell">Bell</string>
    <string name="home">Home</string>
    <string name="booking_history">Booking History</string>
    <string name="confirmed">Confirmed</string>
    <string name="pending">Pending</string>
    <string name="cancelled">Cancelled</string>
    <string name="completed">Completed</string>
    <string name="update">Update</string>
    <string name="profile">Profile</string>
    <string name="booking_not_found">Booking not found!</string>
    <string name="all">All</string>
    <string name="agents">Agents</string>
    <string name="details">Details</string>
    <string name="how_did_we_do">How did we do?</string>
    <string name="care_to_share_more_about_it">Care to share more about it?</string>
    <string name="publish_feedback">Publish Feedback</string>
    <string name="your_review_will_be_posted_to_the_google_play_store">Your review will be posted to the Google Play store.</string>
    <string name="wallet">Wallet</string>
    <string name="current_balance">Current Balance</string>
    <string name="add_new_payment">Add New Payment</string>
    <string name="help_section">Help Section</string>
    <string name="submit">Submit</string>
    <string name="membership_for_1_month_plan">MEMBERSHIP FOR 1 MONTH PLAN</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="enter_code">Enter Code</string>
    <string name="add_payment">Add Payment</string>
    <string name="ongoing_requests">Ongoing Requests</string>
    <string name="requests_history">Requests History</string>
    <string name="channel_name">service</string>
    <string name="channel_description">This is about service.</string>
    <string name="booking_request_not_found">Booking Request Not Found!</string>
    <string name="connect_to_the_internet_and">Connect to the Internet and</string>
    <string name="retry"> Retry!</string>
    <string name="notification">Notification</string>
    <string name="subscription_not_found">Subscription not found!</string>
    <string name="you_are_not_connected_to_the_internet">You are not connected to the Internet. Just call on this number for Booking!</string>
    <string name="complete">Complete</string>
    <string name="rating">Rating</string>
    <string name="contact_us">Contact Us</string>
    <string name="email">Email</string>
    <string name="add_feedback">Add Feedback</string>
</resources>