<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.SubscriptionFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryVariantColor"
            android:elevation="10dp"
            app:navigationIcon="@drawable/ic__arrow_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/subscriptions"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/subsLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/subscription_back"
            android:elevation="5dp"
            android:visibility="gone">


            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_alignTop="@+id/tvPrice"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-15dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/pay_card" />

            <TextView
                android:id="@+id/tvMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/membership_for_1_month_plan"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMember"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter_semibold"
                android:text="20 $"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp" />

            <TextView
                android:id="@+id/tvStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/black"
                android:layout_below="@id/tvPrice"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/inter_semibold"
                android:layout_below="@id/tvStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvOrders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvEnd"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/subs_back"
                android:fontFamily="@font/inter_semibold"
                android:padding="5dp"
                android:text="10 ORDERS"
                android:textColor="@color/black" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvActiveSubs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_below="@+id/toolBar"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSubs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvActiveSubs"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/subscription_not_found"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/layNotConnected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/connect_to_the_internet_and"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/retry"
                android:textColor="@color/primaryVariantColor"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>
</layout>